--- a/home.html
+++ b/home.html
@@ -47,7 +47,7 @@
                 <a class="nav-link " href="todo.html">ToDo</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="login.html"> <i class="fa fa-user" aria-hidden="true"></i> Logout</a>
+                <a class="nav-link" href="index.html"> <i class="fa fa-user" aria-hidden="true"></i> Logout</a>
               </li>
             </ul>
           </div>
