--- a/todo.html
+++ b/todo.html
@@ -51,7 +51,7 @@
                 <a class="nav-link active" href="#" onclick="todolist()" >ToDo</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="login.html"> <i class="fa fa-user" aria-hidden="true"></i> Logout</a>
+                <a class="nav-link" href="index.html"> <i class="fa fa-user" aria-hidden="true"></i> Logout</a>
               </li>
             </ul>
           </div>
