--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <header class="header_section">
       <div class="container-fluid">
         <nav class="navbar navbar-expand-lg custom_nav-container ">
-          <a class="navbar-brand" href="login.html">
+          <a class="navbar-brand" href="index.html">
             <span>
               ToDo List 
             </span>
@@ -29,7 +29,7 @@
           
             <ul class="navbar-nav  ">
               <li class="nav-item active">
-                <a class="nav-link " href="login.html"> <i class="fa fa-user" aria-hidden="true"></i> Login</a>
+                <a class="nav-link " href="index.html"> <i class="fa fa-user" aria-hidden="true"></i> Login</a>
               </li>
             </ul>
         </nav>
